k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-health-deployment
  labels:
    app: home-health
spec:
  replicas: 2
  selector:
    matchLabels:
      app: home-health
  template:
    metadata:
      name: home-health
      labels:
        app: home-health
    spec:
      containers:
        - name: home-heath
          image: mordovin/homeheath:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 3
      restartPolicy: Always
