k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-heath
spec:
  selector:
    app: home-heath
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
